--- a/test.ipynb
+++ b/test.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP3oQKh4ZnGYqqm7c1S/bUC",
+      "authorship_tag": "ABX9TyOeeSNdarxTi1DB/wcqA3Mj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,21 +28,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OxoZyk4Qej4_",
-        "outputId": "5a902d8e-9fbb-4e83-8db3-b492ddd564fc"
+        "outputId": "cf9ef6d7-49aa-42d3-a446-d18ba42edabd"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "4\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 0, 4, 6, 8, 12, 17, 43, 74, 81, 92, 754, 912, 1098]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
         }
       ],
       "source": [
@@ -54,9 +57,27 @@
         "    quickSort(arr_input,start,pp - 1 ) # sorts the left half of the range\n",
         "    quickSort(arr_input,pp + 1 , end ) # sorts the right half of the range\n",
         "\n",
-        "  pass\n",
         "def partition(arr_input,start,end):\n",
-        "  pass\n"
+        "  pivot = arr_input[end]\n",
+        "  i = start - 1\n",
+        "\n",
+        "  for j in range(start,end):\n",
+        "    if arr_input[j] <= pivot:\n",
+        "      i+=1\n",
+        "      iVal = arr_input[i]\n",
+        "      jVal = arr_input[j]\n",
+        "      #swap\n",
+        "      arr_input[i] = jVal\n",
+        "      arr_input[j] = iVal\n",
+        "  \n",
+        "  iVal = arr_input[i+1]\n",
+        "  arr_input[end] = iVal\n",
+        "  arr_input[i+1] = pivot\n",
+        "  return i + 1\n",
+        "\n",
+        "inp_arr\n",
+        "quickSort(inp_arr,0,len(inp_arr)-1)\n",
+        "inp_arr"
       ]
     }
   ]
